# async-1brc

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: rust-CI.yml
data/: line_gen.py
src/: args.rs  config.rs  lib.rs  main.rs
src/assertion/: match_files.rs  mod.rs
src/parser/: func.rs  hashable_buffer.rs  line.rs  mod.rs  models.rs  simd_parser.rs  sync.rs  task.rs
src/reader/: func.rs  mod.rs  models.rs  sync.rs
src/timed/: mod.rs  operation.rs
