[package]
name = "async-1brc"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[[bin]]
name = "main"
test = true

[[bin]]
name = "io_only"
path = "src/bin/io_only.rs"
required-features = ["bench"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
deadqueue = "0.2.4"
gxhash = "3.1.1"
itertools = "0.12.1"
nohash = { version = "0.2.0", optional = true }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "io-std", "macros", "sync", "io-util", "fs", "time"] }

[features]
default = []
debug = []
bench = []
assert = []
timed = []
timed-extreme = ["timed"] # this has a real performance impact
nohash = ["dep:nohash"]
noparse = ["noparse-name", "noparse-value"]
noparse-name = []
noparse-value = []
